Clean up misc. code smells, eliminate most Guava use
Signed-off-by: Daniel Widdis <widdis@gmail.com>